# aoc

./: .gitignore  CMakeLists.txt  Cargo.toml  main.cpp
day01/: CMakeLists.txt  Cargo.toml  lib.c  part1.c
day01/solution/: CMakeLists.txt  part2.c
day01/solution/tests/: tests.cpp
day01/src/: lib.rs  tests.rs
day01/tests/: CMakeLists.txt  tests.cpp
day02/: CMakeLists.txt  Cargo.toml  build.rs  game.c  part1.c  part2.c
day02/solution/: CMakeLists.txt  internal.c
day02/solution/include/day02/: solution.h
day02/solution/tests/: tests.cpp
day02/src/: lib.rs  tests.rs
day02/tests/: CMakeLists.txt  tests.cpp
day03/src/: board.rs  lib.rs  tests.rs
day04/src/: card.rs  lib.rs  tests.rs
day05/: Cargo.toml
day05/src/: category.rs  lib.rs  map.rs  tests.rs
day06/src/: lib.rs  tests.rs
day07/src/: lib.rs  tests.rs
day08/: Cargo.toml
day08/src/: lib.rs  node.rs  tests.rs
day09/src/: lib.rs  sequence.rs  tests.rs
day10/: Cargo.toml
day10/src/: coord_pipe.rs  lib.rs  next_pipe.rs  pipe_board.rs  tests.rs
day11/src/: lib.rs  space.rs  tests.rs
day12/: Cargo.toml
day12/src/: lib.rs  tests.rs
day13/src/: lib.rs  tests.rs
day14/src/: lib.rs  tests.rs
day15/src/: book.rs  label.rs  lens.rs  lib.rs  tests.rs
day16/src/: beam.rs  cave.rs  lib.rs  tests.rs
src/: day18.rs  day20.rs  day21.rs  main.rs  solution.rs
src/day01/: mod.rs  tests.rs
src/day02/: mod.rs  tests.rs
src/day03/: board.rs  mod.rs
src/day04/: mod.rs
src/day05/: category.rs  map.rs  mod.rs
src/day06/: mod.rs
src/day07/: mod.rs
src/day08/: mod.rs
src/day09/: mod.rs  sequence.rs
src/day10/: coord_pipe.rs  mod.rs  pipe_board.rs
(+51 files in other folders)
