[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["day01", "day02"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.12.0" }
num = { version = "0.4.1" }
num-integer = { version = "0.1" }
rand = { version = "0.8.5" }
clap = { version = "4.5.11", features = ["derive"] }
